[package]
name = "snotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.8"
dbus = "0.9.6"
isahc = "1.7"
futures = { version = "0.3.*" }
tokio = {version = "1.0", features = ["full"] }

log = "0.4.17"
env_logger = "0.9.0"
sysinfo = "0.25.2"
image = "0.24.3"
